--- a/lecture1.html
+++ b/lecture1.html
@@ -28,11 +28,14 @@
         <br>
         <input type="submit" value="submit">
      </form> --> 
-     <div class="outer">
+     <!-- <div class="outer">
         <div class="container">
             <button>submit</button>    
-        </div>
+        </div> -->
 
-    <script src="lecture1.js"></script>
+        <input type="text" id="name" placeholder="enter your name">
+        <button class="btn">add student</button>
+        <div class="list"></div>
+        <script src="lecture1.js"></script>
 </body>
 </html>
